fix: :bug: addedMailFilesToDocumentButton
Also made a minor UI fix when name was too large

--- a/src/components/atoms/DocumentButton/documentbutton.scss
+++ b/src/components/atoms/DocumentButton/documentbutton.scss
@@ -9,6 +9,10 @@
     .nameFile {
         font-size: 1rem;
         margin-left: 0.5rem;
+        max-width: 320px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .sizeFile {
